--- a/package.json
+++ b/package.json
@@ -13,7 +13,19 @@
     "build": "vuepress build src"
   },
   "license": "MIT",
+  "dependencies": {
+    "@docsearch/css": "^1.0.0-alpha.27",
+    "@docsearch/js": "^1.0.0-alpha.27",
+    "algoliasearch": "^4.4.0",
+    "axios": "^0.21.1",
+    "intersection-observer": "^0.11.0",
+    "showdown": "^1.9.1"
+  },
   "devDependencies": {
-    "vuepress": "^1.5.3"
+    "vuepress": "^1.5.3",
+    "@vuepress/plugin-pwa": "^1.5.4",
+    "sass": "^1.32.0",
+    "patch-package": "^6.2.2",
+    "sass-loader": "^8.0.2",
   }
 }
