--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "showdown": "^1.9.1"
   },
   "devDependencies": {
-    "vuepress": "^1.5.3",
+    "@vuepress/plugin-back-to-top": "^1.8.2",
+    "@vuepress/plugin-medium-zoom": "^1.8.2",
     "@vuepress/plugin-pwa": "^1.5.4",
-    "sass": "^1.32.0",
+    "@vuepress/theme-vue": "^1.8.2",
     "patch-package": "^6.2.2",
-    "sass-loader": "^8.0.2"
+    "sass": "^1.32.0",
+    "sass-loader": "^8.0.2",
+    "vuepress": "^1.5.3"
   }
 }
