--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "repository": "https://github.com/cool-fe/docs-winex-cli.git/docs-winex-cli",
   "scripts": {
     "dev": "vuepress dev src",
-    "build": "vuepress build src"
+    "build": "vuepress build src",
+    "dumi:build": "dumi build",
+    "dumi:dev": "dumi dev",
+    "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'"
   },
   "license": "MIT",
   "dependencies": {
@@ -29,6 +32,9 @@
     "patch-package": "^6.2.2",
     "sass": "^1.32.0",
     "sass-loader": "^8.0.2",
-    "vuepress": "^1.5.3"
+    "vuepress": "^1.5.3",
+    "umi-plugin-hire": "^1.0.3",
+    "dumi": "^1.0.13",
+    "@umijs/utils":"^3.5.17"
   }
 }
